# CLINKv2

./: Cargo.toml
math/src/: lib.rs
math/src/fft/polynomial/: dense.rs
poly_commit/: Cargo.toml
poly_commit/src/: data_structures.rs  error.rs  lib.rs
poly_commit/src/ipa_pc/: data_structures.rs  mod.rs
poly_commit/src/kzg10/: data_structures.rs  mod.rs
poly_commit/src/marlin_pc/: data_structures.rs  mod.rs
poly_commit/src/sonic_pc/: data_structures.rs  mod.rs
scheme/: Cargo.toml  mimc.out  mulexp.out  res.txt  rescue.out
scheme/src/: lib.rs
scheme/src/bulletproofs/: arithmetic_circuit.rs  inner_product_proof.rs  mod.rs
scheme/src/clinkv2/: mod.rs  prover.rs
scheme/src/clinkv2/r1cs/: error.rs
scheme/src/groth16/: prover.rs  test.rs
scheme/tests/: fft-clinkv2.rs  mimc-clinkv2.rs  mimc-groth16-1.rs  mimc-groth16-2.rs  mimc-groth16.rs  mulexp.rs  poseidon-clinkv2.rs  poseidon-groth16.rs  rescue-clinkv2.rs  rescue-groth16.rs  test_poly_commit.rs
