[package]
name = "ckb-zkp"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A library for better use zero-knowledge proof"
keywords = ["cryptography", "zero-knowledge", "zkp", "gadget", "r1cs"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = [
    "math",
    "curve",
    "scheme",
    "cli",
    "tests",
    "poly_commit",
]
exclude = [
    "contracts",
    "dependencies",
]


[features]
default = ["full"]
#full = ["parallel", "bn_256", "bls12_381", "groth16", "bulletproofs"]
full = ["bn_256", "bls12_381", "groth16", "clinkv2", "bulletproofs"]
parallel = ["std", "math/parallel", "curve/parallel", "scheme/parallel"]
std = ["math/std", "curve/std", "scheme/std"]
bn_256 = ["curve/bn_256"]
bls12_381 = ["curve/bls12_381"]
groth16 = ["scheme/groth16"]
clinkv2 = ["scheme/clinkv2"]
bulletproofs = ["scheme/bulletproofs"]
test_groth16 = ["scheme/test_groth16"]
test_bulletproof = ["scheme/test_bulletproofs"]
test_clinkv2 = ["scheme/test_clinkv2"]
mimc = ["scheme/mimc"]
rescue = ["scheme/rescue"]
poseidon = ["scheme/poseidon"]
test_mulexp = ["scheme/test_mulexp"]


[dependencies]
math = { path = "math", default-features = false }
scheme = { path = "scheme", default-features = false }
curve = { path = "curve", default-features = false }
rand = { version = "0.7", default-features = false }
poly_commit = { path = "poly_commit" }

[dev-dependencies]
rand = { version = "0.7" }
blake2s_simd = "0.5"
byteorder = "1"
num-traits = { version = "0.2", default-features = false }

[profile.test]
opt-level = 3
