[package]
name = "scheme"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "implementation of the different zero-knowledge proof system schemes"
keywords = ["zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["full"]
full = ["parallel", "clinkv2", "groth16", "bulletproofs"]
#full = ["std", "clinkv2", "groth16", "bulletproofs"]
std = ["math/std"]
parallel = ["std", "rayon", "math/parallel"]
groth16 = []
bulletproofs = ["merlin", "sha3", "digest"]
test_groth16 = []
test_bulletproofs = []
clinkv2 = []
test_clinkv2 = []
mimc = []
rescue = []
poseidon = []
test_mulexp = []


[dependencies]
math = { path = "../math", default-features = false, features = [ "derive" ] }
curve = { path = "../curve", default-features = false }
poly_commit = { path = "../poly_commit", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
smallvec = "1.1.0"
merlin = { version = "2.0.0", default-features = false, optional = true }
sha3 = { version = "0.8", default-features = false, optional = true }
digest = { version = "0.8", default-features = false, optional = true }
#algebra-core = { git = "https://github.com/scipr-lab/zexe/", default-features = false }
transpose = { version = "0.2.0" }
#algebra = { git = "https://github.com/scipr-lab/zexe/", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }


[dev-dependencies]
csv = { version = "1" }
rand = { version = "0.7" }
curve = { path = "../curve", default-features = false, features = [ "bls12_381", "bn_256", "sw6" ] }

